--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cli": "^2.9.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
