--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,175 @@
 {
-  "recommendations": [
-    "andersonmfjr.vue-extension-pack",
-    "vscodevim.vim",
-    "mubaidr.vuejs-extension-pack",
-    "ritwickdey.liveserver",
-    "dbaeumer.vscode-eslint",
-    "msjsdiag.debugger-for-chrome",
-    "streetsidesoftware.code-spell-checker"
-  ]
+    "recommendations": [
+        "aeschli.vscode-css-formatter",
+        "alefragnani.bookmarks",
+        "alefragnani.project-manager",
+        "alexcvzz.vscode-sqlite",
+        "austin.code-gnu-global",
+        "bajdzis.vscode-database",
+        "batisteo.vscode-django",
+        "be5invis.vscode-custom-css",
+        "bierner.markdown-mermaid",
+        "bierner.markdown-preview-github-styles",
+        "bradlc.vscode-tailwindcss",
+        "bungcip.better-toml",
+        "burkeholland.simple-react-snippets",
+        "chenxsan.vscode-standardjs",
+        "christian-kohler.npm-intellisense",
+        "christian-kohler.path-intellisense",
+        "ckolkman.vscode-postgres",
+        "codezombiech.gitignore",
+        "csholmq.excel-to-markdown-table",
+        "dariofuzinato.vue-peek",
+        "darkriszty.markdown-table-prettify",
+        "dart-code.dart-code",
+        "dart-code.flutter",
+        "davidanson.vscode-markdownlint",
+        "dbaeumer.vscode-eslint",
+        "donjayamanne.git-extension-pack",
+        "donjayamanne.githistory",
+        "dotjoshjohnson.xml",
+        "dsteenman.cloudformation-yaml-snippets",
+        "dsznajder.es7-react-js-snippets",
+        "eamodio.gitlens",
+        "ecmel.vscode-html-css",
+        "editorconfig.editorconfig",
+        "eg2.tslint",
+        "eg2.vscode-npm-script",
+        "erd0s.terraform-autocomplete",
+        "eriklynd.json-tools",
+        "esbenp.prettier-vscode",
+        "evan-buss.font-switcher",
+        "felipecaputo.git-project-manager",
+        "firsttris.vscode-jest-runner",
+        "flowtype.flow-for-vscode",
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-rename-tag",
+        "formulahendry.code-runner",
+        "formulahendry.docker-explorer",
+        "gabrielbb.vscode-lombok",
+        "gamunu.vscode-yarn",
+        "gencer.html-slim-scss-css-class-completion",
+        "github.vscode-pull-request-github",
+        "goessner.mdmath",
+        "gogocrow.webpack-snippets",
+        "golang.go",
+        "googlecloudtools.cloudcode",
+        "grapecity.gc-excelviewer",
+        "gruntfuggly.todo-tree",
+        "hangxingliu.vscode-nginx-conf-hint",
+        "hashicorp.terraform",
+        "hollowtree.vue-snippets",
+        "hookyqr.beautify",
+        "humao.rest-client",
+        "iocave.monkey-patch",
+        "ionutvmi.path-autocomplete",
+        "ivangabriele.vscode-heroku",
+        "jchannon.csharpextensions",
+        "jebbs.plantuml",
+        "jeremyrajan.webpack",
+        "joaompinto.vscode-graphviz",
+        "juhahinkula.thymeleaf",
+        "jundat95.react-native-snippet",
+        "karigari.chat",
+        "kddejong.vscode-cfn-lint",
+        "kevinrose.vsc-python-indent",
+        "kexi.vscode-uiflow",
+        "knisterpeter.vscode-github",
+        "lokalise.i18n-ally",
+        "lunuan.kubernetes-templates",
+        "magicstack.magicpython",
+        "marchrock.vscode-ghq",
+        "matklad.rust-analyzer",
+        "mdickin.markdown-shortcuts",
+        "mechatroner.rainbow-csv",
+        "mgmcdermott.vscode-language-babel",
+        "mhutchie.git-graph",
+        "michelemelluso.code-beautifier",
+        "microprofile-community.mp-rest-client-generator-vscode-ext",
+        "microprofile-community.mp-starter-vscode-ext",
+        "microprofile-community.vscode-microprofile-pack",
+        "mindaro-dev.file-downloader",
+        "mindaro.mindaro",
+        "mohsen1.prettify-json",
+        "mrmlnc.vscode-scss",
+        "ms-azuretools.vscode-docker",
+        "ms-ceintl.vscode-language-pack-ja",
+        "ms-dotnettools.csharp",
+        "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter",
+        "ms-vscode-remote.remote-containers",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-wsl",
+        "ms-vscode.cpptools",
+        "ms-vscode.js-debug-nightly",
+        "msjsdiag.debugger-for-chrome",
+        "msjsdiag.vscode-react-native",
+        "mtxr.sqltools",
+        "njpwerner.autodocstring",
+        "octref.vetur",
+        "orta.vscode-jest",
+        "peakchen90.vue-beautify",
+        "pivotal.vscode-boot-dev-pack",
+        "pivotal.vscode-concourse",
+        "pivotal.vscode-manifest-yaml",
+        "pivotal.vscode-spring-boot",
+        "pkosta2005.heroku-command",
+        "pmneo.tsimporter",
+        "pranaygp.vscode-css-peek",
+        "rbbit.typescript-hero",
+        "redhat.fabric8-analytics",
+        "redhat.java",
+        "redhat.vscode-commons",
+        "redhat.vscode-community-server-connector",
+        "redhat.vscode-microprofile",
+        "redhat.vscode-quarkus",
+        "redhat.vscode-rsp-ui",
+        "redhat.vscode-xml",
+        "redhat.vscode-yaml",
+        "rogalmic.bash-debug",
+        "romanpeshkov.vscode-text-tables",
+        "rust-lang.rust",
+        "ryu1kn.partial-diff",
+        "sburg.vscode-javascript-booster",
+        "sdras.vue-vscode-snippets",
+        "serayuzgur.crates",
+        "sgryjp.japanese-word-handler",
+        "shanoor.vscode-nginx",
+        "shd101wyy.markdown-preview-enhanced",
+        "sibiraj-s.vscode-scss-formatter",
+        "sidthesloth.html5-boilerplate",
+        "sonarsource.sonarlint-vscode",
+        "souche.vscode-mindmap",
+        "steoates.autoimport",
+        "stephanvs.dot",
+        "streetsidesoftware.code-spell-checker",
+        "syler.sass-indented",
+        "thebarkman.vscode-djaneiro",
+        "thekalinga.bootstrap4-vscode",
+        "tobiah.unity-tools",
+        "tushortz.python-extended-snippets",
+        "tyriar.sort-lines",
+        "vector-of-bool.gitflow",
+        "vincaslt.highlight-matching-tag",
+        "visualstudioexptteam.vscodeintellicode",
+        "vscjava.vscode-java-debug",
+        "vscjava.vscode-java-dependency",
+        "vscjava.vscode-java-pack",
+        "vscjava.vscode-java-test",
+        "vscjava.vscode-maven",
+        "vscjava.vscode-spring-boot-dashboard",
+        "vscjava.vscode-spring-initializr",
+        "vscode-icons-team.vscode-icons",
+        "vscodevim.vim",
+        "vuetifyjs.vuetify-vscode",
+        "wingrunr21.vscode-ruby",
+        "xabikos.reactsnippets",
+        "yzhang.markdown-all-in-one",
+        "zainchen.json",
+        "zhuangtongfa.material-theme",
+        "zignd.html-css-class-completion",
+        "ziyasal.vscode-open-in-github",
+    ]
 }
